# the-cevennes-express

./: .gitignore  CameraControl.gd  CameraRaycast.gd  Main.gd  Main.tscn  README.md  creativeMode.gd  creativeMode.tscn  debugInfo.gd  default_bus_layout.tres  default_env.tres  godot-testing-command.txt  ingameMenuTest.gd  project.godot  project_without_keyboard-alternates.backup  tce_code-structuring_sections.txt  tce_code-structuring_sections_class-files.txt  testing-script.gd
assets/: foreign-assets.license  gare_code-shader.gdshader  gare_medium.glb  gare_medium.material  gare_medium.tscn  grid_definition.tex
doc/: index.html
export/: grid_export.md  input-methods_export.md  tile-ideas_export.md  tiles_export.md
hexGrid/: hexGrid.gd  hexGrid.tscn
lib/: tile.gdnlib  tile.gdns
lib/cpp_libraries/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
lib/cpp_libraries/cmake/: ClangToolbox.cmake  CompilerFlags.cmake  GDNativeLibrary.cmake  GTest.cmake  GodotBindings.cmake
lib/cpp_libraries/include/: GodotIncludes.hpp  GodotTestClass.hpp
lib/cpp_libraries/include/Tile/: Edge.hpp  EdgeType.hpp  Tile.hpp
lib/cpp_libraries/src/: GodotTestClass.cpp  main.cpp
lib/cpp_libraries/src/Tile/: Edge.cpp  EdgeType.cpp  Tile.cpp
lib/cpp_libraries/tests/: CMakeLists.txt
lib/cpp_libraries/tests/UnitTests/: CMakeLists.txt  testTest.cpp
lib/cpp_libraries/tests/UnitTests/Tile/: CMakeLists.txt  EdgeType_Tests.cpp  EdgeType_Tests.hpp  EdgeType_Utils.hpp  Edge_Tests.cpp  Edge_Tests.hpp  Edge_Utils.hpp  Tile_Tests.cpp  Tile_Tests.hpp  Tile_Utils.hpp
pages/: Grid.md  (+3 more)
(+169 files in other folders)
